<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PERRINN</string>

    <string name="api_base_url">api.perrinnapp.net</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="loading_string">Welcome! Press here to enter.</string>
    <string name="projectsButton_string">Your projects</string>
    <string name="profileButton_string">Your profile</string>
    <string name="title_activity_landing">Home</string>
    <string name="title_activity_projects">projectsActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="addDetailsButton_string">Add Details</string>
    <string name="addImageButton_string">Add an image</string>
    <string name="createNewProjectButton_string">Create new project</string>
    <string name="team_list_title">TEAMS</string>
    <string name="team_add_dialog_title">Add a new team</string>
    <string name="team_add_dialog_name_hint">Team\'s name:</string>
    <string name="team_add_dialog_positive">Add</string>
    <string name="dialogs_cancel_button">Cancel</string>
    <string name="CreateProjectButton_string">Create</string>
    <string name="textView_ProjectName">Project Name</string>
    <string name="textView_ProjectOwner">Project Owner</string>
    <string name="insertMembersButton_string">Insert Members</string>
    <string name="insertTeamsButton_string">Insert Teams</string>
    <string name="settings_profile_title">Profile</string>
    <string name="settings_profile_add_ti">Add trusted identifier</string>
    <string name="settings_profile_rd_title">Registered Devices</string>
    <string name="settings_profile_rd_desc">Your profile is accessible from these devices\nThe Main
    device is needed to access your profile from other devices.</string>
    <string name="settings_profile_ti_title">Trusted Identifiers</string>
    <string name="settings_profile_ti_desc">People you trust, family members, friends, that help
    you register new and cancel lost devices to make your profile very secured - you are identifier
    for them as well.</string>
    <string name="settings_profile_key_lose">If you lose your key, ask a team member to let you in
        with a new key. The lost key will be cancelled.</string>
    <string name="settings_profile_push_notifications">Push notifications</string>
    <string name="settings_profile_location_label">Instant location</string>
    <string name="settings_profile_location_shared">Shared</string>
    <string name="settings_profile_location_nshared">Not Shared</string>
    <string name="settings_profile_resign_tl">Resign as team leader</string>
    <string name="settings_profile_leave">Leave</string>
    <string name="login_text">We are a team</string>
    <string name="login_create_team">CREATE A NEW TEAM (new user)</string>
    <string name="login_join_team">JOIN A TEAM (new user)</string>
    <string name="login_enter">ENTER (existing user)</string>

    <string name="settings_team_edit_name">Edit team name and \nstatus...</string>
    <string name="settings_team_add_member">Add member</string>
    <string name="settings_team_team_address">The team address is</string>
    <string name="settings_team_header_org">ORGANIZATION</string>
    <string name="settings_team_part_org">This team is part of</string>
    <string name="settings_team_hint_share">You can share with any other</string>
    <string name="settings_team_header_proj">PROJECTS</string>
    <string name="settings_team_add_project">Add a new project...</string>
    <string name="type_message">type message</string>
    <string name="chat_hint_message">Message</string>

    <string name="gmap_no_location_dialog_title">No location</string>
    <string name="gmap_no_location_dialog_message">Sorry but we could not find your actual location.</string>

    <string name="dialogs_ok_message">Ok</string>
    <string name="team_mate_profile_nominate_tl">Nominate as team leader</string>
    <string name="team_mate_profile_pchat">Private chat</string>
    <string name="team_mate_profile_local_time">local time</string>
    <string name="team_mate_profile_time_hours">hours</string>

    <string name="wallet_new_transaction">New Transaction</string>

    <string-array name="settings_profile_change_picture_choices">
        <item>Use the camera</item>
        <item>Choose in the gallery</item>
    </string-array>
    <string-array name="wallet_options">
        <item>Send/Request</item>
        <item>Pending</item>
        <item>History</item>
        <item>Buy/Sell</item>
        <item>Charts</item>
    </string-array>
    <string-array name="sampleArray">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>FootBall</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
    </string-array>
    <string name="title_activity_maps_fragment">Map</string>

</resources>
