<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:gravity="center"
            android:textSize="16dp"/>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="@dimen/login_button_top_margin">
        <Button
            android:id="@+id/login_create_team_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_create_team"
            android:background="@drawable/login_buttons_shape"
            android:textColor="@color/colorLoginButtonText"
            />
        <Button
            android:id="@+id/login_join_team_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_join_team"
            android:background="@drawable/login_buttons_shape"
            android:layout_marginTop="@dimen/login_button_top_margin"
            android:textColor="@color/colorLoginButtonText"
            />
        <Button
            android:id="@+id/login_enter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_enter"
            android:textColor="@color/colorLoginEnterButton"
            android:background="@drawable/login_buttons_shape"
            android:layout_marginTop="@dimen/login_button_top_margin"
            />
    </LinearLayout>

</RelativeLayout>
