<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/settings_team_background_placeholder"
        >
        <FrameLayout
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/settings_team_team_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFFFF"
                    android:layout_marginRight="8dp"/>
                <TextView
                    android:id="@+id/settings_team_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/settings_team_team_name"
                    android:padding="8dp"
                    android:background="#FFFFFFFF"
                    android:text="@string/settings_team_edit_name"/>
                <TextView
                    android:id="@+id/settings_team_add_member"
                    android:layout_below="@id/settings_team_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="#FFFFFFFF"
                    android:text="@string/settings_team_add_member"/>
            </RelativeLayout>
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical">
                <ImageView
                    android:id="@+id/settings_team_picture"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/settings_team_background_preview_placeholder"/>
                <ImageButton
                    android:id="@+id/settings_team_change_picture_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_camera"
                    android:tint="#FFFFFFFF"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="2dp"
                    android:layout_marginLeft="2dp"/>
            </FrameLayout>
        </FrameLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="#FFFFFFFF">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/settings_team_team_address"/>
            <TextView
                android:id="@+id/settings_team_team_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textStyle="bold"
                android:textColor="@color/colorSettingsTeam"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_team_header_org"
            android:paddingTop="36dp"
            android:paddingBottom="8dp"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@color/colorSettingsTeamHeaderBackground"
            android:textColor="@color/colorSettingsTeamHeaderTitle"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="#FFFFFFFF">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/settings_team_part_org"/>
            <TextView
                android:id="@+id/settings_team_org_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorSettingsTeam"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/settings_team_hint_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_team_hint_share"
            android:paddingLeft="8dp"
            android:background="#FFFFFFFF"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_team_header_proj"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="36dp"
            android:paddingBottom="8dp"
            android:background="@color/colorSettingsTeamHeaderBackground"
            android:textColor="@color/colorSettingsTeamHeaderTitle"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/settings_team_projects_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="#FFFFFFFF"/>
        <TextView
            android:id="@+id/settings_team_add_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_team_add_project"
            android:gravity="center"
            android:textColor="@color/colorSettingsTeam"
            android:padding="8dp"
            android:background="#FFFFFFFF"/>
    </LinearLayout>
</ScrollView>